@@ -8,10 +8,12 @@ Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>
   notice and this notice are preserved.
 
 * Unreleased
-** Implement image rotation methods
+** Implement image transformation methods
 The methods below can be found in =(png image-processing rotate)= module:
 - =png-image-rotate-90/cw=: 90 degrees clockwise rotation
 - =png-image-rotate-90/ccw=: 90 degrees counter-clockwise rotation
+- =png-image-flip-vertical=: Vertical flip.
+- =png-image-flip-horizontal=: Horizontal flip.
 
 * Changes in version 0.7.2 (2024-02-10)
 ** Fix ellipse drawing                                               :BUGFIX:
